kube/istio/vs-route-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sa-external-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /accounts
    route:
    - destination:
        host: micro-service
        port:
          number: 9091
  - match:
    - uri:
        prefix: /vip
    route:
    - destination:
        host: vip-service
        port:
          number: 9092
